# ACam

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/acam/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/acam/: ARVideo.java  ArVideoActivity.java  GLView.java  HelloAR.java  MainActivity.java  VideoRenderer.java
app/src/main/res/drawable/: shape_loading_window.xml
app/src/main/res/layout/: activity_main.xml  popwindow_loading.xml  popwindow_tools.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/acam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
